<resources>
    <string name="app_name">Test</string>
    <string name="participant">P</string>
    <string name="submit">Submit</string>
    <string name="testName">Math Test</string>
    <string name="question">Question</string>
    <string name="back">Back</string>
    <string name="next">next</string>
    <string name="exit">Exit</string>
    <string name="results">Results</string>
    <string name="questions_answered_correctly">Total Correct Answers:</string>
    <string name="questions_attempted">Total Questions Answered:</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="total_errors">Total Errors:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="error_rate">Error Rate:</string>
    <string name="export_data">Export Data</string>
    <string name="project_name">Mask</string>
    <string name="trialName">Masked</string>
    <string name="exitExport">Exit</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="query_project">Mask</string>
    <string name="participantIndicator">Participant:</string>
    <string name="trialIndicator">Trial:</string>
    <string name="projectIndicator">Project:</string>
    <string name="delete_all">Delete All</string>
</resources>