<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayResultsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0, 1"

        >
        <TableRow
            android:layout_weight="1">

            <TextView
                android:id="@+id/results"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:textAlignment="center"
                android:layout_weight="1"
                android:text="@string/results" />
        </TableRow>

        <TableRow
            android:layout_weight="1">

            <TextView
                android:id="@+id/participantId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/participantIndicator" />

            <TextView
                android:id="@+id/participant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/qCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questions_answered_correctly"
                />

            <TextView
                android:id="@+id/pCorrectly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/qAttempted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questions_attempted"
                 />

            <TextView
                android:id="@+id/pAttempted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/totalErrors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_errors" />
            <TextView
                android:id="@+id/errorNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/Accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accuracy" />
            <TextView
                android:id="@+id/accuracyPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/errorRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_rate" />
            <TextView
                android:id="@+id/errorPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            >
            <Button
                android:id="@+id/exitResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/return_to_main_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="0dp"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>